--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
    <link rel="stylesheet" href="%PUBLIC_URL%/plugins/summernote/summernote-bs4.min.css">
 </head>
 
-<body>
+<body class="sidebar-mini layout-fixed">
    <noscript>You need to enable JavaScript to run this app.</noscript>
    <div id="root"></div>
    <!--
